Add docs-cards to front-page

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,7 +1,7 @@
 @use '../spruce/scss/spruce';
 
 .footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.05);
+  // border-top: 1px solid rgba(0, 0, 0, 0.05);
   padding: spruce.spacer(xxl) 0;
 
   &__container {
