--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -7,35 +7,32 @@
   }
 
   &__inner {
+    --gap: 2rem;
     align-items: center;
     display: grid;
-    gap: 2rem;
+    gap: var(--gap);
     grid-template-columns: minmax(0, 1fr);
     justify-content: center;
     padding: clamp(spruce.spacer(xxl), 6vw, spruce.spacer(xxxl)) 0;
     text-align: center;
 
     @include spruce.breakpoint(md) {
-      gap: 4rem;
+      --gap: 4rem;
       grid-template-columns: minmax(0, 1.25fr) minmax(0, 1fr);
       justify-content: flex-start;
       text-align: left;
     }
   }
 
-  &__caption {
-    @include spruce.layout-stack(spruce.spacer(s), false);
-  }
-
   &__image {
-    order: -1;
     margin-left: auto;
     margin-right: auto;
     max-width: 22rem;
+    order: -1;
 
     @include spruce.breakpoint(md) {
-      order: 2;
       max-width: none;
+      order: 2;
     }
   }
 
@@ -43,14 +40,18 @@
     height: 3rem;
   }
 
+  .notification {
+    margin: 0;
+  }
+
   &__title {
-    font-size: clamp(spruce.font-size(h1), 5vw, 4.75rem);
+    font-size: spruce.font-size(h1);
     letter-spacing: -2px;
     line-height: 1;
-    margin-top: 1.5rem;
+    margin: 1.5rem 0 0;
     max-width: 50ch;
 
-    span {
+    .highlighted {
       color: spruce.color('primary');
       margin-left: -0.1em;
     }
