--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -45,10 +45,10 @@
   }
 
   &__title {
-    font-size: spruce.font-size(h1);
+    font-size: spruce.responsive-font-size($size: 4.75rem, $scaler: 40);
     letter-spacing: -2px;
     line-height: 1;
-    margin: 1.5rem 0 0;
+    margin: 0;
     max-width: 50ch;
 
     .highlighted {
