--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -51,7 +51,7 @@
   }
 
   &__title {
-    font-size: 3.3rem;
+    font-size: spruce.responsive-font-size($size: 3.3rem, $scaler: 40);
     margin: 0;
   }
 }
