--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -8,7 +8,7 @@
   &__inner {
     align-items: center;
     display: flex;
-    gap: clamp(spruce.spacer(m), 1vw, spruce.spacer(l));
+    gap: spruce.spacer(l);
     justify-content: space-between;
     height: 5rem;
     position: relative;
