--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -15,7 +15,7 @@
   }
 
   .prism-code {
-    border-top: 1px solid rgba(0, 0, 0, 0.075);
+    border-top: 1px solid spruce.color(border);
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin: 0;
