--- a/src/styles/components/_docs-cards.scss
+++ b/src/styles/components/_docs-cards.scss
@@ -4,7 +4,7 @@
   margin-bottom: spruce.spacer(xl);
 
   &__container {
-    @include spruce.layout-center;
+    @include spruce.layout-center($gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
   }
 
   &__inner {
