--- a/src/styles/components/_error-404.scss
+++ b/src/styles/components/_error-404.scss
@@ -3,7 +3,7 @@
 
 .error-404 {
   &__container {
-    @include spruce.layout-center;
+    @include spruce.layout-center($gutter: clamp(spruce.spacer(m), 5vw, spruce.spacer(l)));
   }
 
   &__inner {
