--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -3,8 +3,12 @@
 
 .sidebar {
   position: relative;
-  border-right: 1px solid rgba(0, 0, 0, 0.05);
   padding-right: spruce.spacer(m);
+  
+  @include spruce.breakpoint(sm) {
+    border-right: 1px solid rgba(0, 0, 0, 0.05);
+    padding-right: spruce.spacer(m);
+  }
 
   > * + * {
     margin-top: 3rem;
