--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -58,7 +58,7 @@
     max-width: 50ch;
 
     .highlighted {
-      color: spruce.color('primary');
+      color: spruce.color(primary);
       margin-left: -0.1em;
     }
   }
