--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -3,11 +3,10 @@
 
 .sidebar {
   position: relative;
-  padding-right: spruce.spacer(m);
   
   @include spruce.breakpoint(sm) {
-    border-right: 1px solid rgba(0, 0, 0, 0.05);
-    padding-right: spruce.spacer(m);
+    border-inline-end: 1px solid rgba(0, 0, 0, 0.05);
+    padding-inline-end: spruce.spacer(m);
   }
 
   > * + * {
