--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -45,7 +45,7 @@
           position: absolute;
           top: 0;
           bottom: 0;
-          left: -1.25rem;
+          inset-inline-start: -1.25rem;
         }
       }
     }
