--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -61,8 +61,10 @@
 
   &__icon {
     flex-shrink: 0;
+    height: 1.25rem;
     margin-inline-end: 0.5rem;
     margin-top: 0.2rem;
+    width: 1.25rem;
   }
 
   &__content {
