--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -71,7 +71,7 @@
     display: flex;
     flex-grow: 1;
     font-family: spruce.$font-family-heading;
-    justify-content: flex-end;
+    justify-content: end;
 
     ul {
       background-color: spruce.color(background);
