Docs: add new items, write appendix

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -44,6 +44,11 @@
       &:active {
         color: spruce.color(primary);
       }
+
+      &[aria-current='page'] {
+        color: spruce.color(primary);
+        font-weight: 700;
+      }
     }
   }
 
