Use Spruce from package

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@use 'sprucecss/scss/spruce' with (
+@use '~sprucecss/scss/spruce' with (
   $colors: (
     base: (
       primary-darkest: hsl(272, 100%, 9%),
