--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -43,12 +43,15 @@
       grid-column: 1 / 2;
     }
 
-    > * + h2,
+    > * + h2 {
+      margin-top: spruce.spacer(l);
+    }
+
     > * + h3,
     > * + h4,
     > * + h5,
     > * + h6 {
-      margin-top: spruce.spacer(l);
+      margin-top: 2.25rem;
     }
 
     h2 {
