--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -22,3 +22,15 @@
     flex-wrap: wrap;
   }
 }
+
+.inline-text-element-list {
+  @include spruce.layout-stack(spruce.spacer(s));
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  @include spruce.breakpoint(sm) {
+    columns: 2 auto;
+    column-gap: spruce.spacer(l);
+  }
+}
