Add active element marker on TOC

--- a/src/styles/components/_table-of-content.scss
+++ b/src/styles/components/_table-of-content.scss
@@ -30,6 +30,11 @@
       &:focus {
         color: spruce.color(primary);
       }
+
+      &.is-active {
+        color: spruce.color(primary);
+        text-decoration: underline;
+      }
     }
   }
 }
