--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -59,7 +59,8 @@
       margin-top: 2.25rem;
     }
 
-    h2 {
+    .anchor-heading {
+      padding-inline-end: 2rem;
       position: relative;
 
       &:hover {
@@ -69,17 +70,19 @@
       }
 
       > a {
-        font-size: 0.6em;
-        font-weight: 400;
-        line-height: 1;
         position: absolute;
         text-decoration: none;
-        top: calc(50% - 0.45em);
-        inset-inline-start: -1.2em;
+        top: calc(50% - 0.625em);
+        inset-inline-end: 0;
         opacity: 0;
 
         &:focus {
           opacity: 1;
+        }
+
+        svg {
+          height: 1.25rem;
+          width: 1.25rem;
         }
       }
     }
