--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -17,7 +17,7 @@
 
     .letter,
     .icon {
-      fill: rgba(0, 0, 0, 0.15) !important; 
+      fill: rgba(0, 0, 0, 0.15) !important;
     }
   }
 
@@ -83,5 +83,9 @@
       height: 100%;
       width: auto;
     }
+  }
+
+  strong {
+    color: spruce.color(heading);
   }
 }
