Update Spruce CSS version

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,9 +8,11 @@
       install-background: hsl(0, 0%, 95%),
       install-background-hover: hsl(0, 0%, 90%),
       install-foreground: hsl(0, 0%, 10%),
+      install-foreground-hover: hsl(0, 0%, 10%),
       decline-background: hsl(207, 39%, 17%),
       decline-background-hover: hsl(207, 23%, 26%),
       decline-foreground: hsl(0, 0%, 100%),
+      decline-foreground-hover: hsl(0, 0%, 100%),
     ),
     cookie: (
       background: hsl(207deg 95% 8%),
