--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -51,7 +51,11 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size($size: 4.75rem, $scaler: 40);
+    font-size: spruce.responsive-font-size(
+      $size: 4.75rem,
+      $scaler: 40,
+      $optimal-size: '4vw + 1rem'
+    );
     letter-spacing: -2px;
     line-height: 1;
     margin: 0;
@@ -78,8 +82,8 @@
     margin-top: 1.5rem;
 
     > * {
-      margin: spruce.spacer(xs); 
-    
+      margin: spruce.spacer(xs);
+
       @include spruce.breakpoint(md) {
         margin: spruce.spacer(xs) 0;
         margin-inline-end: spruce.spacer(m);
