--- a/src/styles/layout/_documentation.scss
+++ b/src/styles/layout/_documentation.scss
@@ -76,7 +76,11 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size($size: 3.3rem, $scaler: 40);
+    font-size: spruce.responsive-font-size(
+      $size: 3.3rem,
+      $scaler: 40,
+      $optimal-size: '3vw + 1rem'
+    );
     margin: 0;
 
     @include spruce.breakpoint(lg) {
