Add order to frontmatter, start post navigation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,7 @@
 @forward 'components/table-of-content';
 @forward 'components/cookie-consent';
 @forward 'components/entry-content';
+@forward 'components/page-navigation';
 
 @forward 'layout/documentation';
 @forward 'layout/page';
